docs(v1.1.0 update): multiple workspace feature documentation
